--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@ html {
 body {
   width: 100%;
   height: 100vh;
-  
 }
 
 header {
@@ -27,7 +26,7 @@ header {
   box-shadow: 2px 13px 18px -5px rgba(0, 0, 0, 0.75);
   -webkit-box-shadow: 2px 13px 18px -5px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 2px 13px 18px -5px rgba(0, 0, 0, 0.75);
-  padding: 0, 20px;
+  padding: 20px;
 }
 
 main {
@@ -35,22 +34,16 @@ main {
   background-image: url(/img/BackgroundSP.png);
   background-repeat: no-repeat;
   background-size: cover;
-  
-
 }
 
 .logo img {
   width: 6rem;
-  margin-top: 20px;
-  margin-bottom: 20px;
 }
 
 .navigation {
   display: flex;
   list-style-type: none;
   gap: 30px;
-  margin-top: 20px;
-  margin-bottom: 20px;
 }
 
 .navigation a {
@@ -75,7 +68,6 @@ main {
   margin-top: 20px;
   margin-bottom: 50px;
   font-size: 1rem;
-  
 }
 
 .container__cards {
